<resources>
    <string name="app_name">Test</string>
    <string name="tab_login">Login</string>
    <string name="tab_registration">Registration</string>


    <string name="login_hint">Login</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_registration">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name ="action_logout">Logout</string>
    <string name="map">Map</string>
    <string name="photos">Photos</string>
    <string name="title_activity_maps">Map</string>
    <string name="date">Date</string>
    <string name="download_image">Download image</string>
    <string name="send_photo">Send photo</string>

</resources>
